[package]
name = "vnc"
version = "0.4.0"
authors = ["whitequark <whitequark@whitequark.org>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/whitequark/rust-vnc"
homepage = "https://github.com/whitequark/rust-vnc"
documentation = "https://whitequark.github.io/rust-vnc/vnc"
description = "An implementation of VNC protocol, client state machine, a client and a proxy"

[dependencies]
log = "0.3"
byteorder = "0.4"
flate2 = "0.2.13"

[workspace]
members = ["client", "proxy"]
