[package]
name = "vnc"
version = "0.4.0"
authors = ["whitequark <whitequark@whitequark.org>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/whitequark/rust-vnc"
homepage = "https://github.com/whitequark/rust-vnc"
documentation = "https://whitequark.github.io/rust-vnc/vnc"
description = "An implementation of VNC protocol, client state machine, a client and a proxy"

[features]
apple-auth = ["num-bigint", "octavo", "rust-crypto"]

[dependencies]
log = "0.3"
byteorder = "0.5"
flate2 = "0.2.13"
num-bigint = { version = "*", optional = true }
# Diffie-Hellman key exchange only in octavo > 0.1.1
octavo = { git = "https://github.com/libOctavo/octavo", rev = "d94d924616dca83b9c6cfc815062276c5908713a", optional = true }
rust-crypto = { version = "0.2.36", optional = true }

[workspace]
members = ["client", "proxy"]
