[package]
name = "vnc-client"
version = "1.0.0"
authors = ["whitequark <whitequark@whitequark.org>"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/whitequark/rust-vnc"
homepage = "https://github.com/whitequark/rust-vnc"
description = "A VNC client"
edition = "2018"

[[bin]]
name = "rvncclient"
path = "main.rs"

[dependencies]
byteorder = "0.5"
log = "0.4"
env_logger = "0.7"
clap = "2.33"
sdl2 = "0.34"
x11 = "2.3"

[dependencies.vnc]
path = ".."
version = "0.4"
